--- a/.github/workflows/automated-test.yml
+++ b/.github/workflows/automated-test.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [22.x, 20.x, 18.x 16.x]
+        node-version: [22.x, 20.x, 18.x, 16.x]
 
     steps:
       - uses: actions/checkout@v2
